ecmascript/parser/tests/jsx/errors/wrong-closing-tag-fragment/input.js.stderr
error: Expected corresponding JSX closing tag for <>
 --> $DIR/tests/jsx/errors/wrong-closing-tag-fragment/input.js:1:3
  |
1 | <></something>
  |   ^^^^^^^^^^^^

